--- a/Entrevoisins/app/src/main/AndroidManifest.xml
+++ b/Entrevoisins/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".ui.neighbour_list.NeighbourProfilActivity"
-            android:parentActivityName=".ui.neighbour_list.ListNeighbourActivity"
-            >
+            android:parentActivityName=".ui.neighbour_list.ListNeighbourActivity">
         </activity>
         <activity
             android:name=".ui.neighbour_list.ListNeighbourActivity"
